// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PageTitle should display children 1`] = `
<withBreakpoints(Topbar)>
  <Title
    color="default"
  >
    content
  </Title>
</withBreakpoints(Topbar)>
`;

exports[`PageTitle should set color default 1`] = `
<withBreakpoints(Topbar)>
  <Title
    color="default"
  >
    content
  </Title>
</withBreakpoints(Topbar)>
`;

exports[`PageTitle should set color primary 1`] = `
<withBreakpoints(Topbar)>
  <Title
    color="primary"
  >
    content
  </Title>
</withBreakpoints(Topbar)>
`;
